{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 51,
  "lineage": "77358b1c-8e07-dc2a-1930-e1c9110461dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "week4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462373802185:route-table/rtb-08a1b536d9dfb8f62",
            "default_route_table_id": "rtb-08a1b536d9dfb8f62",
            "id": "rtb-08a1b536d9dfb8f62",
            "owner_id": "462373802185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a7a8ba7d53942c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "automation-rt"
            },
            "tags_all": {
              "Name": "automation-rt"
            },
            "vpc_id": "vpc-00b344a15c80f2124"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance_hw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:462373802185:instance/i-0340f6064ddba5a8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "automation-profile",
            "id": "i-0340f6064ddba5a8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ECE592.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2b19a7995e33345",
            "private_dns": "ip-10-0-1-177.ec2.internal",
            "private_ip": "10.0.1.177",
            "public_ip": "3.86.240.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b85199c3db1ea913",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c38b1490c5df3e2",
            "tags": {
              "Name": "automation-vm"
            },
            "tags_all": {
              "Name": "automation-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0223c4166119ee6d1"
            ]
          },
          "dependencies": [
            "aws_security_group.week4",
            "aws_subnet.automation_sub_a",
            "aws_vpc.main",
            "data.aws_ami.latest-amazon-ami",
            "aws_iam_instance_profile.automation-profile",
            "aws_iam_role.automation-role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462373802185:internet-gateway/igw-02a7a8ba7d53942c7",
            "id": "igw-02a7a8ba7d53942c7",
            "owner_id": "462373802185",
            "tags": {
              "Name": "automation-igw"
            },
            "tags_all": {
              "Name": "automation-igw"
            },
            "vpc_id": "vpc-00b344a15c80f2124"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "week4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462373802185:security-group/sg-0223c4166119ee6d1",
            "description": "AllowSSHinboundtraffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0223c4166119ee6d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "automation-ssh-sg",
            "name_prefix": "",
            "owner_id": "462373802185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "automation-ssh-sg"
            },
            "tags_all": {
              "Name": "automation-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b344a15c80f2124"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "automation_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462373802185:subnet/subnet-01c38b1490c5df3e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01c38b1490c5df3e2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462373802185",
            "tags": {
              "Name": "automation-sub-a"
            },
            "tags_all": {
              "Name": "automation-sub-a"
            },
            "vpc_id": "vpc-00b344a15c80f2124"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "week_4_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462373802185:subnet/subnet-0230900d6e4587dfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0230900d6e4587dfa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462373802185",
            "tags": {
              "Name": "ece592-automation-sub-b"
            },
            "tags_all": {
              "Name": "ece592-automation-sub-b"
            },
            "vpc_id": "vpc-00b344a15c80f2124"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462373802185:vpc/vpc-00b344a15c80f2124",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7ba3470de898c96",
            "default_route_table_id": "rtb-08a1b536d9dfb8f62",
            "default_security_group_id": "sg-0a6a7e3bb6451e2d0",
            "dhcp_options_id": "dopt-bad5cec0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00b344a15c80f2124",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a1b536d9dfb8f62",
            "owner_id": "462373802185",
            "tags": {
              "Name": "automation-vpc"
            },
            "tags_all": {
              "Name": "automation-vpc"
            }
          }
        }
      ]
    }
  ]
}